# fastapi-template

./: .env.sample  .gitignore  Makefile  Pipfile  README.md  pyproject.toml
scripts/: entrypoint.sh
src/: alembic.ini  main.py
src/adapters/: postgres_adapter.py  redis_adapter.py  request_adapter.py
src/adapters/enums/: http_method_enum.py
src/api/: router.py
src/api/middlewares/: auth_middleware.py  cache_middleware.py
src/api/schema/: pagination_schema.py
src/api/v1/: health_check.py  router.py
src/core/: auth_middleware.py  config.py  logger.py  setup_logging.py
src/core/enums/: base_enum.py
src/core/exceptions/: __init__.py  exceptions.py
src/core/exceptions/exception_handlers/: __init__.py  core_exception_handlers.py  middleware_exception_handlers.py
src/core/middlewares/: auth_middleware.py  cache_middleware.py
src/db/: __init__.py  db.py
src/db/mixins/: __init__.py  crud.py
src/db/models/: __init__.py  base_model.py
src/dependencies/: cache_dependency.py  redis_dependency.py
src/dependency/: cache_dependency.py
src/enums/: base_enum.py  http_method_enum.py  http_methods_enum.py
src/migrations/: env.py
src/migrations/versions/: 53642a1a8a4c_auto.py
src/models/: __init__.py  base_model.py  user_model.py
src/models/enums/: user_role_enum.py
src/services/: auth_service.py  cache_service.py  jwt_service.py  request_service.py
src/utils/: exception_decorator.py  json_serialization.py  permission.py
tests/: conftest.py
tests/integration/: test_health_check.py
